2008-08-13  higepon  <higepon@users.sourceforge.jp>

        * library.scm (make-parameter): Added SRFI-39 Parameter Objects to Mosh core.

2008-08-12  higepon  <higepon@users.sourceforge.jp>

        * Added dynamic-wind. It works well.

        * VM.cpp (VM::run): Fixed bug of recieve from (values).

2008-08-08  higepon  <higepon@users.sourceforge.jp>

        * library.scm (expt): Addes expt.

        * r6rs-test-suite/Makefile (test): Added r6rs-test-suite from PLT Scheme.

        * Makefile.am (test): Added R6RS tests.

2008-08-07  higepon  <higepon@users.sourceforge.jp>

        * Implemented R6RS Conditions.

2008-08-05  higepon  <higepon@users.sourceforge.jp>

        * freeproc.cpp (scheme::assertionViolationEx): added assertion-violation.

        * Implemented R6RS Records "Syntactic Layer".

        * r6rs-examples/record-test.ss: Added R6RS Records test.

        * Implemented R6RS Records "Inspection".

2008-08-04  higepon  <higepon@users.sourceforge.jp>

        * Implemented R6RS Records "Procedural Layer".

2008-08-01  higepon  <higepon@users.sourceforge.jp>

        * example/grass.scm: Applied a patch by IRIE Shinsuke.

        * VM.cpp (VM): Applied a patch for READ_CHAR by IRIE Shinsuke.

        * Record.h: Added.

        * RecordTypeDescriptor.h: Added.

        * Callable.h : Added.

2008-07-25  higepon  <higepon@users.sourceforge.jp>

        * Implemented all of hashtable procedures!

        * string-ci-hash, symbol-hash, equal-hash.

        * hashtable-clear!, hashtable-entries, hashtable-hash-function, hashtable-equivalence-function.

        * library.scm : hashtable-update!, hashtable-copy and hashtable-mutable?.

        * free-vars.scm : Added hashtable-delete!, hashtable-contains?.

2008-07-24  higepon  <higepon@users.sourceforge.jp>

        * free-vars.scm : Added (hashtable? ...) and (hashtable-size ...).

        * HashTableProceduures.cpp : Added (hash-string).

        * HashTableProceduures.h: Added.
