@@ -1,3 +1,7 @@
+2008-08-14  higepon  <higepon@users.sourceforge.jp>
+
+        * VM.cpp (run): Added Object Pointer type checking for debug build.
+
 2008-08-13  higepon  <higepon@users.sourceforge.jp>
 
         * library.scm (make-parameter): Added SRFI-39 Parameter Objects to Mosh core.
